data-nuxt-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-nuxt-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-nuxt-app
  template:
    metadata:
      labels:
        app: data-nuxt-app
    spec:
      containers:
        - name: data-nuxt-app
          image: data-nuxt-app-image
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          startupProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
          resources:
            requests:
              cpu: "200m" # Requesting 0.2 cores as baseline
              memory: "256Mi" # Requesting 256MB of memory
            limits:
              cpu: "500m" # Maximum of 0.5 cores
              memory: "512Mi" # Maximum of 512MB of memory
