data-nuxt-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-nuxt-app-service
spec:
  selector:
    app: data-nuxt-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
